@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-06T08:17:51Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
+  "timestamp" : "2024-02-07T01:00:08Z",
+  "count" : 2,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -0, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
