@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-06T08:17:51Z",
-  "count_outdated" : 1034,
-  "uniques_outdated" : 603,
-  "count" : 1064,
+  "timestamp" : "2024-02-07T01:00:08Z",
+  "count_outdated" : 1036,
+  "uniques_outdated" : 604,
+  "count" : 1065,
   "uniques" : 620,
   "clones" : [
-    {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-24T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
